--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
